--- a/src/workflows/deploy.yml
+++ b/src/workflows/deploy.yml
@@ -5,42 +5,36 @@ on:
     branches:
       - main
       - master
-  workflow_dispatch: # Позволяет запускать вручную
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
 
-      - name: Install Supabase CLI
-        run: |
-          curl -fsSL https://github.com/supabase/cli/releases/download/v1.163.6/supabase_1.163.6_linux_amd64.tar.gz | tar -xz
-          sudo mv supabase /usr/local/bin/supabase
-          supabase --version
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
 
       - name: Link Supabase Project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
-        run: |
-          supabase link --project-ref $SUPABASE_PROJECT_REF
+        run: supabase link --project-ref $SUPABASE_PROJECT_REF
 
       - name: Deploy Edge Functions
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: |
-          cd supabase/functions
-          supabase functions deploy make-server-1c191bcf --no-verify-jwt
+        run: supabase functions deploy smart-function --no-verify-jwt
 
       - name: Deployment Success
-        run: |
-          echo "✅ Edge Functions deployed successfully!"
-          echo "🔗 Function URL: https://${{ secrets.SUPABASE_PROJECT_REF }}.supabase.co/functions/v1/make-server-1c191bcf"
+        run: echo "✅ Edge Functions deployed successfully!"
