--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,36 +10,31 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
 
-      - name: Install Supabase CLI
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/supabase/cli/main/install.sh | sh
-          sudo mv supabase /usr/local/bin/supabase
-          supabase --version
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
 
       - name: Link Supabase Project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
-        run: |
-          supabase link --project-ref $SUPABASE_PROJECT_REF
+        run: supabase link --project-ref $SUPABASE_PROJECT_REF
 
       - name: Deploy Edge Functions
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: |
-          cd supabase/functions
-          supabase functions deploy smart-function --no-verify-jwt
+        run: supabase functions deploy smart-function --no-verify-jwt
 
       - name: Deployment Success
-        run: |
-          echo "✅ Edge Functions deployed successfully!"
+        run: echo "✅ Edge Functions deployed successfully!"
